# shishua_rs

./: Cargo.toml
benches/: bench.rs
src/: avx2_backend.rs  core.rs  lib.rs  neon_backend.rs  rand.rs  rand_v0.9  scalar_backend.rs  sse2_backend.rs  ssse3_backend.rs
tests/: compare.rs
